#2964683 Create simplifier CrudeMDL - started writing regexpautomaton , on progress not functioning